<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent" android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             tools:context="com.zia.page.search.RecommendFragment">

    <TextView
            android:text="@string/recommend"
            android:textSize="14sp"
            android:textColor="@color/textBlack_light"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

    <com.donkingliang.labels.LabelsView
            android:id="@+id/recommend_labelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelTextSize="14sp"
            app:labelTextColor="@color/textBlack_light"
            app:labelTextPaddingBottom="5dp"
            app:labelTextPaddingLeft="10dp"
            app:labelTextPaddingRight="10dp"
            app:labelTextPaddingTop="5dp"
            app:lineMargin="10dp"
            app:wordMargin="10dp"
            android:padding="10dp"
            app:maxLines="3"
            app:selectType="NONE"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/search_history"
            android:textSize="14sp"
            android:textColor="@color/textBlack_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/recommend_labelView"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView"/>

    <ListView
            android:id="@+id/recommend_historyListView"
            android:layout_width="match_parent"
            android:layout_height="0dp" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:clipChildren="false"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="0dp" android:id="@+id/recommend_freshLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView">

        <ImageView
                android:src="@drawable/ic_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimary"
                android:id="@+id/recommend_refresh" app:layout_constraintEnd_toStartOf="@+id/recommend_change"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="@+id/recommend_change"
                app:layout_constraintBottom_toBottomOf="@+id/recommend_change" android:scaleType="fitEnd"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp"/>
        <TextView
                android:text="@string/shuffle"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/recommend_change" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:clipChildren="false"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="0dp" android:id="@+id/recommend_deleteLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4">

        <ImageView
                android:src="@drawable/ic_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimary" app:layout_constraintEnd_toStartOf="@+id/recommend_change"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="@+id/recommend_change"
                app:layout_constraintBottom_toBottomOf="@+id/recommend_change" android:scaleType="fitEnd"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp" app:srcCompat="@drawable/ic_delete"/>
        <TextView
                android:text="@string/delete_all"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
