<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zia.page.setting.SettingFragment">

    <include layout="@layout/toolbar" android:id="@+id/include"/>

    <TextView
            android:text="@string/blame_off"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_blame"/>
    <TextView
            android:text="@string/check_update"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkApp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_appVersion_tv" app:layout_constraintEnd_toEndOf="parent"
            tools:text="v1.4"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkApp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/fix_easybook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/setting_checkFix"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_fixVersion_tv" app:layout_constraintEnd_toEndOf="parent"
            tools:text="v2.42"
            app:layout_constraintTop_toTopOf="@+id/setting_checkFix" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/join_qq_group"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/setting_joinQQ"
            app:layout_constraintBottom_toBottomOf="@+id/setting_joinQQ"/>
    <TextView
            android:text="@string/custom_site"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/setting_customSite_tv"
            app:layout_constraintTop_toTopOf="@+id/setting_customSite"
            app:layout_constraintBottom_toBottomOf="@+id/setting_customSite"
            app:layout_constraintStart_toStartOf="@+id/setting_customSite"
            android:layout_marginStart="16dp"/>
    <View
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/setting_blame"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/include"/>
    <View
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/setting_checkApp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/setting_blame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <View
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/setting_checkFix"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/setting_checkApp"/>
    <View
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/setting_customSite"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/setting_checkFix"/>
    <View
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/setting_joinQQ"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_customSite" app:layout_constraintHorizontal_bias="0.0"
    />
    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:id="@+id/decor1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/setting_checkApp" app:layout_constraintHorizontal_bias="0.49"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:id="@+id/decor2"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/setting_checkFix"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:id="@+id/docor3" app:layout_constraintBottom_toBottomOf="@+id/setting_checkFix"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>

    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:id="@+id/docor5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/setting_joinQQ"
            app:layout_constraintBottom_toTopOf="@+id/setting_joinQQ"/>

    <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:id="@+id/decor4" app:layout_constraintBottom_toBottomOf="@+id/setting_joinQQ"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>
    <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:visibility="invisible"
            android:background="@color/red"
            android:id="@+id/setting_appVersion_alert"
            app:layout_constraintEnd_toEndOf="@+id/setting_checkApp"
            app:layout_constraintTop_toTopOf="@+id/setting_checkApp" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>
    <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:visibility="invisible"
            android:background="@color/red"
            android:id="@+id/setting_fixVersion_alert"
            app:layout_constraintEnd_toEndOf="@+id/setting_checkFix"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="@+id/setting_checkFix"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
